docs: add swagger annotations for categories
